# boussole-politique

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.fr.md  README.md  deny.toml  formule-congruence.md  modele-donnees-v2.md  revue-specs-2026-06-12.md  roadmap.md  rust-toolchain.toml  specs-v0.1.md  specs-v0.2.md  specs-v0.3.md  specs-v0.4.md  specs-v0.5.md  vecteurs-test.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
assets/brand/: LICENSE.md  construction.md  manifest.json
crates/domain/: Cargo.toml
crates/scoring/: Cargo.toml
crates/scoring/src/: lib.rs
crates/scoring/tests/: golden_vectors.rs
docs/: architecture-cible.md  charte-neutralite.md  donnees-personnelles.md  modele-menace.md  plan-mvp.md  product-readiness.md  spec-v1.md
docs/design/: consommation-pwa.md  direction-artistique.md  revue-miniatures.md
docs/implementation/: contrats-rust-m2.md  m1-sensitivity.md
docs/methodology/: m1-gate-registration.v1.json  selection-v1.md  taxonomie-themes-v0.md
dry-run/: SCHEMA-NOTES.md
dry-run/fixtures/: vivier-link-overrides.json
dry-run/scripts/: anlib.py  export_corpus.py  formule_v2.py  q1-funnel.py  q1-verify.py  q1-verify2.py  q2-polarisation.py  q3-verif.py  q3-version.py  q4-mandats.py  q5-miseaupoint.py  q6-censure.py  q7-simulation.py  q7-verif.py  q8-vivier-elargi.py  v-q2-check.py  v4-groupchanges.py  v4-mandats-verify.py  v5-verify.py  v6_verify.py  validate_foundation.py  workflow-dry-run.js  (+1 more)
scripts/: check-dry-run-portability.py  check-rust.sh  generate-assets.sh  test-assets.py  verify-m1-sensitivity.py
(+3 files in other folders)
